<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/team_lab"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvBackground"
        android:background="#11000000"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/tvLoginLabel"
        android:layout_alignRight="@+id/tvLoginLabel"
        android:layout_alignEnd="@+id/tvLoginLabel"
        android:layout_alignBottom="@+id/tvForgotPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_label"
        android:id="@+id/tvLoginLabel"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etEmailAddress"
        android:layout_below="@+id/tvLoginLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:state_enabled="true"
        android:state_focused="true"
        android:background="@drawable/apptheme_textfield_activated_holo_dark"
        android:hint="@string/enter_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"

        android:id="@+id/etPassword"
        android:layout_below="@+id/etEmailAddress"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:state_enabled="true"
        android:state_focused="true"
        android:background="@drawable/apptheme_textfield_activated_holo_dark"
        android:hint="@string/enter_password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_label"
        android:id="@+id/btnCancel"
        android:onClick="cancelLogin"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_label"
        android:id="@+id/btnLogin"
        android:onClick="login"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentRight="true"
        android:background="@drawable/apptheme_btn_default_pressed_holo_light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/tvForgotPassword"
        android:onClick="recoverPassword"
        android:layout_below="@+id/btnCancel"
        android:textColor="#33b5e5"
        android:layout_centerInParent="true"
        android:clickable="true" />

</RelativeLayout>
